--- a/LecNotes/lec8_Advanced+Pandas.ipynb
+++ b/LecNotes/lec8_Advanced+Pandas.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -388,7 +388,7 @@
        "19  female  45.0      0      0              2696   7.2250   NaN        C  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,19 +506,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1794457814.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [4]\u001b[1;36m\u001b[0m\n\u001b[1;33m    *(Exercise)*\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
     "*(Exercise)*"
    ]
@@ -530,6 +520,31 @@
     "Note that we need the escape character \"\\\\\" to look for the \".\".  We can easily add the results of the returned series in a new column as follows.\n",
     "This is because \".\" matches any character in regex. Read more about regular expression (regex) [here](https://docs.python.org/3/library/re.html).\n",
     "We can use the `regex=False` argument to avoid this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     True\n",
+       "1    False\n",
+       "2     True\n",
+       "3     True\n",
+       "4    False\n",
+       "Name: Name, dtype: bool"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_titanic[\"Name\"].str.contains(\"Mr.\", regex=False).head()"
    ]
   },
   {
@@ -1966,20 +1981,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def Get_Title(name):\n",
+    "def Get_Title(string):\n",
     "    # split the name into a list of words, and take the first word after \",\"\n",
-    "    parsed_name = name.split(\" \")\n",
+    "    parsed_name = string.split(\" \")\n",
     "    for i in range(len(parsed_name)):\n",
     "        if \",\"  in parsed_name[i]:\n",
     "            return parsed_name[i+1]\n",
     "        \n",
-    "    return title"
+    "    return string"
    ]
   },
   {
@@ -1991,7 +2006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -2007,7 +2022,7 @@
        "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3027,7 +3042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3254,7 +3269,7 @@
        "[418 rows x 11 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3888,7 +3903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3901,7 +3916,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4309,7 +4324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (v3.11.1:a7a450f84a, Dec  6 2022, 15:24:06) [Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.11.1"
   },
   "toc": {
    "colors": {
