--- a/Final Review/pandasss.ipynb
+++ b/Final Review/pandasss.ipynb
@@ -857,7 +857,8 @@
     "    else:\n",
     "        return \"Girlllllll\"\n",
     "\n",
-    "t2.Name.apply(func)"
+    "t2.Name.apply(func)\n",
+    "t2[['Name', 'Cost']].apply(func2)"
    ]
   },
   {
@@ -1295,7 +1296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.1 (v3.11.1:a7a450f84a, Dec  6 2022, 15:24:06) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
